Fix alignment of TaskRun / step header
The content of the TaskRun / step details header should be aligned
with the tabs below rather than being inset past the start of the first tab.

--- a/packages/components/src/components/DetailsHeader/DetailsHeader.scss
+++ b/packages/components/src/components/DetailsHeader/DetailsHeader.scss
@@ -14,7 +14,7 @@ limitations under the License.
 @import '~@tektoncd/dashboard-components/dist/scss/vars';
 
 .tkn--step-details-header {
-  padding: 1.3rem 1.6rem 0;
+  padding: 1rem 1rem 0;
 
   h2 {
     height: 1.7rem;
